Slight changes due to deprecation.